After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754995 - gtkplacessidebar: protect for checking a null event
gtkplacessidebar: protect for checking a null event
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkFileChooser
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
Federico Mena Quintero
Depends on:
Blocks:
 
 
Reported: 2015-09-14 13:20 UTC by Carlos Soriano
Modified: 2015-09-15 06:52 UTC
See Also:
GNOME target: ---
GNOME version: 3.13/3.14


Attachments
gtkplacessidebar: protect for checking a null event (1.42 KB, patch)
2015-09-14 13:20 UTC, Carlos Soriano
committed Details | Review

Description Carlos Soriano 2015-09-14 13:20:13 UTC
Downstream bug https://bugzilla.redhat.com/show_bug.cgi?id=1207187
Comment 1 Carlos Soriano 2015-09-14 13:20:17 UTC
Created attachment 311281 [details] [review]
gtkplacessidebar: protect for checking a null event

We are using the current gtk event position to check if
the user clicked in the eject button of a row.
However, we are calling this in row-activated signal, which
can happens when the gtk+ mainloop already removed the "current"
event, and therefore we were trying to access a null event position
which crashes the sidebar.

To fix it check if we have as current event, and if not,
we will not check for the position. But it's better than crashing,
and shouldn't happen too much.
Comment 2 Matthias Clasen 2015-09-14 17:12:50 UTC
Review of attachment 311281 [details] [review]:

ok
Comment 3 Matthias Clasen 2015-09-14 19:26:51 UTC
This only applies to 3.14, I guess ? Please push it whereever it applies.
Comment 4 Carlos Soriano 2015-09-15 06:52:29 UTC
Yes to 3.14. Thanks for review.

Attachment 311281 [details] pushed as 2db7e3e - gtkplacessidebar: protect for checking a null event